[NEW] update form

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Supreme Nepal Roleplay",
+  "name": "The best rp in nepal",
   "icons": [
     {
       "src": "favicon.ico",
