--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.6",
+    "install": "^0.13.0",
+    "npm": "^9.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
